# texture-unpacker

./: .gitignore  Cargo.toml
src/: atlas.rs  error.rs  lib.rs  main.rs  sparrow_atlas.rs  sprite.rs  spritesheet.rs  xml_atlas.rs
src/formats/: mod.rs
src/formats/json/: json_array.rs  mod.rs
src/formats/xml/: mod.rs  sparrow.rs
